--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,9 +11,9 @@
 		<title>This is my tutorial site</title>
 	</head>
 	<body>
-		<a href="/">home</a>
+        <a href="/">home</a>
         <a href="/about">about</a>
         <a href="/blog">blog</a>
-		<h1>hoge</h1>
+		<h1>about</h1>
 	</body>
 </html>
