--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,19 +1,28 @@
 ---
+import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
+const pageTitle = "blog";
 
+const allPosts = await Astro.glob("../pages/posts/*.md");
 ---
 
-<html lang="jp">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>This is my tutorial site</title>
-	</head>
-	<body>
-        <a href="/">home</a>
-        <a href="/about">about</a>
-        <a href="/blog">blog</a>
-		<h1>BLOG</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <ul>
+    <!-- <li><a href="/posts/post1">post1</a></li>
+    <li><a href="/posts/post2">post2</a></li>
+    <li><a href="/posts/post3">post3</a></li> -->
+    <!-- {
+      allPosts.map((post) => (
+        <li>
+          <a href={post.url}>{post.frontmatter.title}</a>
+        </li>
+      ))
+    } -->
+    {
+      allPosts.map((post) => (
+        <BlogPost url={post.url} title={post.frontmatter.title} />
+      ))
+    }
+  </ul>
+</BaseLayout>
