--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,8 @@
 ---
-
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "home page";
 ---
 
-<html lang="jp">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>This is my tutorial site</title>
-	</head>
-	<body>
-		<a href="/">home</a>
-        <a href="/about">about</a>
-        <a href="/blog">blog</a>
-		<h1>hoge</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>my blog subtitle</h2>
+</BaseLayout>
